feat(moviehub): implement access workflows, queue/status sync, and UI redesign